# raylib-project-generator

./: Cargo.toml  README.md
src/: main.rs
src/template/: Cargo.toml  Makefile  config.toml  index.html
