[package]
name = "raylib-project-generator"
version = "1.0.0"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "Generate rust raylib project to run in browser"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/raylib-project-generator/"
license = "MIT"
keywords = ["gamedev", "graphics", "raylib"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
